# edufuse

./: .gitignore  CMakeLists.txt  README.md  Troubleshooting.md  clean.sh  edufuse.c  run.sh  run_mac.sh
java/: CMakeLists.txt  README.md  commands.sh  compile.sh  libFUSELink.dylib  pom.xml  resources.sh  util_FUSELink.c  util_FUSELink.h
java/licenses/jnr-ffi/: LICENSE
java/licenses/jnr-fuse/: LICENSE
java/src/main/java/: EduFUSE.java
java/src/main/java/com/edufuse/: AbstractFuseFS.java  EduFUSE.java  ErrorCodes.java  FuseCallbacks.java  FuseException.java  FuseFS.java  FuseFillDir.java  FuseStubFS.java  NotImplemented.java
java/src/main/java/com/edufuse/examples/: HelloFUSE.java  HelloFuse.java  ManualBlocksFS.java  ManualBlocksFSStudent.java  MemoryFS.java
java/src/main/java/com/edufuse/filesystem/: AbstractFS.java  FUSE.java  FileSystemStub.java
java/src/main/java/com/edufuse/flags/: AccessConstants.java  FuseBufFlags.java  IoctlFlags.java  XAttrConstants.java
java/src/main/java/com/edufuse/struct/: FileStat.java  Flock.java  FuseBuf.java  FuseBufvec.java  FuseContext.java  FuseFileInfo.java  FuseOperations.java  FusePollhandle.java  Statvfs.java  Timespec.java
java/src/main/java/data/: FUSEConnectionInfo.java  FUSEFileInfo.java  FUSEFillDir.java  Flock.java  Stat.java  StatVFS.java  TimeSpec.java
java/src/main/java/example/: ExampleFS.java
java/src/main/java/filesystem/: AbstractFS.java
java/src/main/java/jnr/ffi/: BaseStruct.java
java/src/main/java/util/: AbstractFS.java  FUSELink.java  FUSEOperations.java  FunctionMap.java
java/src/main/resources/: libFUSELink.dylib
(+94 files in other folders)
